@@ -2,7 +2,7 @@ Package: seriation
 Type: Package
 Title: Infrastructure for seriation
 Version: 1.0-12
-Date: 2013-xx-xx
+Date: 2014-02-18
 Authors@R: c(
 	person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
 	    email = "mhahsler@lyle.smu.edu"),
@@ -18,7 +18,8 @@ Description: Infrastructure for seriation with an implementation of several
     based on seriation.
 Classification/ACM: G.1.6, G.2.1, G.4
 URL: http://R-Forge.R-project.org/projects/seriation/, http://lyle.smu.edu/IDA/seriation/
-Depends: R (>= 2.14.0), stats, cluster, TSP, gclus, grid, colorspace
+Depends: R (>= 2.14.0)
+Imports: TSP, grid, cluster, gclus, colorspace
 Suggests: MASS, biclust, testthat
 License: GPL-2
 Copyright: The code in src/bea.f is Copyright (C) 1991 F. Murtagh; 
